<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@color/white">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.example.marit.maritbeerepoot_pset6.CharInfo">

        <ImageView
            android:id="@+id/CharacterPic"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/imgdes"/>

        <Button
            android:id="@+id/favoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favobutton" />

        <TextView
            android:id="@+id/Charactername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Charactername"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/Characterdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Characterdescription"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/CharacterComics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CharacterComics"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infoComics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/CharacterSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CharacterSeries"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/infoSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/CharacterStories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CharacterStories"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infoStories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>

    </LinearLayout>
</ScrollView>
