<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.marit.maritbeerepoot_pset6.LoggedInUserInfo">

    <TextView
        android:id="@+id/UserInformationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userinfo"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/usernameLogged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/useridLogged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/useremailLogged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/logoutbuttonUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:visibility="gone" />

    <Button
        android:id="@+id/loginbuttonUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:visibility="gone" />

    <TextView
        android:id="@+id/UserFavoritesView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_viewLoggedin"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
