<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.marit.maritbeerepoot_pset6.UserDatabase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/SearchUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/searchenter"
            android:labelFor="@id/Search"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/searchButtonUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search" />
    </LinearLayout>

    <TextView
        android:id="@+id/loadTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="visible" />

    <ListView
        android:id="@+id/list_viewUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
